--- a/languages/polish-verbs/style.css
+++ b/languages/polish-verbs/style.css
@@ -14,8 +14,6 @@ p {
     margin-top: 5px;
 }
 
-
-
 .main-card {
     border-radius: 8px;
     margin: 5% 10%;
@@ -33,10 +31,10 @@ p {
     }
 }
 
-
 .section {
     padding: 2% 5%;
 }
+
 
 /* Top Section */
 
@@ -72,7 +70,7 @@ p {
     }
 
     .wolf-img {
-        width: 30%;
+        width: 25%;
     }
 
     .touch {
@@ -80,6 +78,7 @@ p {
         font-size: 3vw;
     }
 }
+
 
 /* Middle Section */
 
@@ -107,10 +106,15 @@ p {
 }
 
 .geralt {
-    width: 90px;
-    align-self: ;
+    align-self: flex-end;
+    flex: 1 1 2;
+    margin-right: 10px;
 }
 
+.geralt-img {
+    min-width: 40px;
+    width: 100%;
+}
 .verb {
     flex: 1 1 0;
     padding: 10px;
@@ -126,22 +130,37 @@ p {
 .examples {
     flex: 1 1 0;
     text-align: left;
-    font-size: 14px;
     margin: 10px 0;
 }
 
+
+
 .eg-polish {
-    background: rgba(255, 255, 255, 0.6);
-    border-radius: 5px 5px 0 0;
-    padding: 3px 15px;
-    color: rgba(188, 27, 60)
+    background: rgba(250, 250, 250, 0.6);
+    border-radius: 2px;
+    padding: 10px 20px;
+    color: rgb(134, 24, 46);
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.eg-polish > .eg-title {
+    font-weight: 200;
+    color: #473b4f;
 }
 
 .eg-english {
     background: rgba(188, 27, 60, 0.6);
-    border-radius: 0 0 5px 5px;
-    padding: 3px 15px;
-    color: rgb(255, 255, 255);
+    border-radius: 2px;
+    padding: 10px 20px;
+    color: rgb(245, 245, 245);
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.eg-english > .eg-title {
+    font-weight: 200;
+    color: #b06b79;
 }
 
 
@@ -151,7 +170,8 @@ p {
         flex-wrap: wrap;
     }
     .bestiary {
-        flex: 1 1 1;
+        order: 1;
+        flex: 1 1 100%;
         font-size: 14px;
         margin-top: 10px;
     }   
@@ -162,7 +182,7 @@ p {
     }
 
     .examples {
-        flex: 1 1 100%;
+        flex: 1 1 1;
         font-size: 14px;
     }
 }
@@ -185,6 +205,9 @@ p {
         margin-top: 10px;
     } 
 
+    .examples {
+        order: 1;
+    }
 }
 
 
@@ -194,9 +217,26 @@ p {
 
 /* TABLES */
 
-table {
+.bottom {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 
+table {
     text-align: center;
+    margin: auto;
+}
+
+.item {
+    border: solid blue;
+
+}
+.double-table {
+    display: flex;
+    flex-wrap: no-wrap;
+    justify-content: space-evenly;
+    border: solid red;
 }
 
 .tabletitle {
@@ -213,7 +253,13 @@ table {
     color: white;
     font-family: 'Avenir';
     font-weight: lighter;
-    font-size: 14px;
+    font-size: 18px;
+}
+
+@media (max-width: 800px) {
+    .mini-touch {
+        font-size: 14px;
+    }
 }
 
 /* Footer */
@@ -224,3 +270,50 @@ table {
     width: 30%;
     margin: auto;
 }
+
+
+/* Slideshow examples */
+
+.slideshow-container {
+    position: relative;
+}
+
+/* Hide the images by default */
+.mySlides {
+    display: none;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+    cursor: pointer;
+    height: 10px;
+    width: 10px;
+    margin: 0 2px;
+    background-color: #717171;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+  
+  .active, .dot:hover {
+    background-color: #bbb;
+  }
+
+    /* Fading animation */
+
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  
+  @-webkit-keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
+  
+  @keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
