--- a/languages/polish-verbs/style.css
+++ b/languages/polish-verbs/style.css
@@ -1,385 +1,430 @@
-
-
-html, body {
-    margin: 0;
-    padding: 0;
-    line-height: 1.5;
+html,
+body {
+  margin: 0;
+  padding: 0;
+  line-height: 1.5;
 }
 
 h3 {
-    font-size: 14px;
-    padding: 0;
-    margin: 0;
+  font-size: 14px;
+  padding: 0;
+  margin: 0;
 }
 
 p {
-    margin-top: 5px;
+  margin-top: 5px;
 }
 
 .main-card {
-    border-radius: 8px;
-    margin: 5% 10%;
-    background-image: url(images/forest-background.jpg);
-    background-size: cover;
-    font-family: 'Raleway', sans-serif;
-    box-shadow: 0 0 15px rgba(0, 0, 0, .8);
-    position: relative;
+  border-radius: 8px;
+  margin: 5% 10%;
+  background-image: url(images/forest-background.jpg);
+  background-size: cover;
+  font-family: "Raleway", sans-serif;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.8);
+  position: relative;
 }
 
 @media all and (max-width: 600px) {
-    .main-card {
-        margin: 0;
-        border-radius: 0;
-    }
+  .main-card {
+    margin: 0;
+    border-radius: 0;
+  }
 }
 
 .section {
-    padding: 2% 5%;
+  padding: 2% 5%;
 }
 
-
-/* Top Section */
-
+/* TOP SECTION */
 .top {
-    display: flex;
-    justify-content: center; /*  HERE */
-    align-items: center;
-    text-align: center;
+  display: flex;
+  justify-content: center; /*  HERE */
+  align-items: center;
+  text-align: center;
 }
-
 
 .wolf {
-    justify-self: center;
+  justify-self: center;
 }
 
 .wolf-img {
-    min-width: 70px;
-    width: 50%;
+  min-width: 70px;
+  width: 50%;
 }
 
 .touch {
-    border: solid 1px rgba(137, 156, 155, .9);
-    padding: 25px 50px;
-    border-radius: 5px;
-    font-size: 2vw;
-    color: rgb(241, 241, 242);
-    box-shadow: 0 0 15px rgba(241, 241, 242, .2);
-} 
+  border: solid 1px rgba(137, 156, 155, 0.9);
+  padding: 25px 50px;
+  border-radius: 5px;
+  font-size: 2vw;
+  color: rgb(241, 241, 242);
+  box-shadow: 0 0 15px rgba(241, 241, 242, 0.2);
+}
+
+.touch:hover {
+  background-color: rgba(52, 36, 50, 0.8);
+  cursor: pointer;
+}
+
+/* TOP SECTION: Responsive Design: 500px & 800px */
+@media all and (max-width: 800px) {
+  .touch {
+    font-size: 18px;
+    padding: 15px 30px;
+  }
+}
 
 @media all and (max-width: 500px) {
-    .top {
-        flex-wrap: wrap;
-        justify-content: space-around;
-    }
+  .top {
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
 
-    .wolf {
-        flex-basis: 100%;
-        order: -1;
-    }
+  .wolf {
+    flex-basis: 100%;
+    order: -1;
+  }
 
-    .wolf-img {
-        width: 25%;
-    }
+  .wolf-img {
+    width: 25%;
+  }
 
-    .touch {
-        padding: 15px 30px;
-        font-size: 4vw;
-        flex-basis: 100px;
-    }
+  .touch {
+    padding: 15px 30px;
+    font-size: 4vw;
+    flex-basis: 100px;
+  }
 }
 
-@media all and (max-width: 800px) {
-    .touch {
-        font-size: 18px;
-        padding: 15px 30px;
-    }
-}
-
-
-/* Middle Section */
-
+/* MIDDLE SECTION */
 .middle {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    text-align: center;
-    border-top: solid 1px rgba(241, 241, 242, 0.5);
-    background: rgba(52, 36, 50, 0.8);
-    padding-top: 20px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+  border-top: solid 1px rgba(241, 241, 242, 0.5);
+  background: rgba(52, 36, 50, 0.8);
+  padding-top: 20px;
 }
 
+/* Notes */
 .bestiary {
-    flex: 1 1 0;
-    border-radius: 5px;
-    color: #ccc;
-    font-size: 14px;
-    font-weight: 400;
-    position: relative;
-    background: rgba(255, 255, 255, 0.1);
-    padding: 10px 15px;
-    display: flex;
-    margin: 10px;
-    text-align: left;
+  flex: 1 1 0;
+  border-radius: 5px;
+  color: #ccc;
+  font-size: 14px;
+  font-weight: 400;
+  position: relative;
+  background: rgba(255, 255, 255, 0.1);
+  padding: 10px 15px;
+  display: flex;
+  margin: 10px;
+  text-align: left;
 }
 
 .bestiary > p {
-    align-self: center;
+  align-self: center;
 }
 
 .geralt {
-    align-self: flex-end;
-    flex: 1 1 2;
-    margin-right: 10px;
+  align-self: flex-end;
+  flex: 1 1 2;
+  margin-right: 10px;
 }
 
 .geralt-img {
-    min-width: 40px;
-    width: 100%;
+  min-width: 40px;
+  width: 100%;
 }
+
+/* Verb */
 .verb {
-    flex: 1 1 0;
-    padding: 10px;
-    font-weight: bold;
-    color: white;
+  flex: 1 1 0;
+  padding: 10px;
+  font-weight: bold;
+  color: white;
 }
 
-.verb-heading{
-    font-size: 3vw;
-    margin: 0;
-} 
+.verb-heading {
+  font-size: 3vw;
+  margin: 0;
+}
 
+/* Examples */
 .examples {
-    flex: 1 1 0;
-    text-align: left;
-    margin: 10px 0;
+  flex: 1 1 0;
+  text-align: left;
+  margin: 10px 0;
 }
-
-
-
-.eg-polish {
-    background: rgba(250, 250, 250, 0.6);
-    border-radius: 2px;
-    padding: 10px 20px;
-    color: rgb(134, 24, 46);
-    font-size: 14px;
-    font-weight: 400;
-}
-
-.eg-polish > .eg-title {
-    font-weight: 200;
-    color: #473b4f;
-}
-
-.eg-english {
-    background: rgba(188, 27, 60, 0.6);
-    border-radius: 2px;
-    padding: 10px 20px;
-    color: rgb(245, 245, 245);
-    font-size: 14px;
-    font-weight: 400;
-}
-
-.eg-english > .eg-title {
-    font-weight: 200;
-    color: #b06b79;
-}
-
-
-@media all and (max-width: 800px) {
-
-    .middle {
-        flex-wrap: wrap;
-    }
-    .bestiary {
-        order: 1;
-        flex: 1 1 100%;
-        font-size: 14px;
-        margin-top: 10px;
-    }   
-
-    .verb {
-        order: -1;
-        flex: 1 1 1;
-    }
-
-    .examples {
-        flex: 1 1 1;
-        font-size: 14px;
-    }
-
-    .verb-heading{
-    font-size: 5vw;
-    }
-}
-
-
-@media all and (max-width: 500px) {
-    .middle {
-        flex-direction: column;
-    }
-
-    .verb {
-        order: -1;
-    }
-
-    .verb-heading {
-        font-size: 6vw;
-    }
-
-    .bestiary {
-        margin-top: 10px;
-    } 
-
-    .examples {
-        order: 1;
-    }
-}
-
-
-
-
-
-
-/* TABLES */
-
-.bottom {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    text-align: center;
-    /* background: rgba(52, 36, 50, 0.6); */
-}
-
-.table-container {
-    border-radius: 4px;
-    background:rgba(52, 36, 50, .6); 
-    padding: 0 20px;
-}
-table {
-    text-align: center;
-    margin: auto;
-}
-
-.item {
-    border: solid blue;
-
-}
-.double-table {
-    display: flex;
-    flex-wrap: no-wrap;
-    justify-content: space-evenly;
-    border: solid red;
-}
-
-.tabletitle {
-    border-radius: 4px;
-    color: rgb(179, 54, 79);
-    font-size: 1.5vw;
-    font-family: 'Avenir';
-    background: rgba(52, 36, 50, 0.6);
-    padding: 0 10px;
-}
-
-.mini-touch {
-    background-color: rgba(137, 156, 155, 0.5);
-    border-radius: 3px;
-    box-shadow: 0 0 14px rgba(255, 255, 255, .2);
-    padding: 0 5px;
-    margin: 5px;
-    color: white;
-    font-family: 'Avenir';
-    font-weight: lighter;
-    font-size: 1.3vw; /*18px*/
-}
-
-@media (max-width: 800px) {
-    .bottom {
-        justify-content: center;
-    }
-    .mini-touch {
-        font-size: 14px;
-    }
-
-    .tabletitle {
-        font-size: 16px;
-    }
-
-    .table-container {
-        flex: 1 1 50%;
-        background: none;
-        padding: 0;
-    }
-
-    .table-container:first-of-type {
-        flex: 1 1 100%;
-    }
-
-}
-
-@media (max-width: 500px) {
-    .bottom {
-            flex-direction: column;
-        }
-    }
-
-
-/* Footer */
-
-.footer img {
-    display: block;
-    min-width: 170px;
-    max-width: 300px;
-    width: 30%;
-    margin: auto;
-}
-
 
 /* Slideshow examples */
 
 .slideshow-container {
-    position: relative;
+  position: relative;
 }
 
-/* Hide the images by default */
+/* Hide the images by default: ¿Necesito esto? */
 .mySlides {
-    display: none;
+  display: none;
 }
 
-/* The dots/bullets/indicators */
-.dot, .dot-table1, .dot-table2, .dot-table3 {
-    cursor: pointer;
-    height: 10px;
-    width: 10px;
-    margin: 0 2px;
-    background-color: #717171;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-  }
-  
-  .active, .dot:hover, .dot-table1:hover, .dot-table2:hover, .dot-table3:hover {
-    background-color: #bbb;
-  }
+/* The dots */
+.dot,
+.dot-table1,
+.dot-table2,
+.dot-table3 {
+  cursor: pointer;
+  height: 10px;
+  width: 10px;
+  margin: 0 2px;
+  background-color: #717171;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
 
-    /* Fading animation */
+.active,
+.dot:hover,
+.dot-table1:hover,
+.dot-table2:hover,
+.dot-table3:hover {
+  background-color: #bbb;
+}
 
+/* Fading animation */
 .fade {
-    -webkit-animation-name: fade;
-    -webkit-animation-duration: 1.5s;
-    animation-name: fade;
-    animation-duration: 1.5s;
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {
+    opacity: 0.4;
   }
-  
-  @-webkit-keyframes fade {
-    from {opacity: .4}
-    to {opacity: 1}
+  to {
+    opacity: 1;
   }
-  
-  @keyframes fade {
-    from {opacity: .4}
-    to {opacity: 1}
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.eg-english {
+  background: rgba(188, 27, 60, 0.6);
+  border-radius: 2px;
+  padding: 10px 20px;
+  color: rgb(245, 245, 245);
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.eg-polish {
+  background: rgba(250, 250, 250, 0.6);
+  border-radius: 2px;
+  padding: 10px 20px;
+  color: rgb(134, 24, 46);
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.eg-title {
+  font-weight: 200;
+}
+
+.eg-polish > .eg-title {
+  color: #473b4f;
+}
+
+.eg-english > .eg-title {
+  color: #b06b79;
+}
+
+/* MIDDLE SECTION: Responsive design 500pxw & 800pxw */
+@media all and (max-width: 800px) {
+  .middle {
+    flex-wrap: wrap;
+  }
+  .bestiary {
+    order: 1;
+    flex: 1 1 100%;
+    font-size: 14px;
+    margin-top: 10px;
   }
 
-  .table1, .table2, .table3 {
-      display: none;
+  .verb {
+    order: -1;
+    flex: 1 1 1;
   }
+
+  .examples {
+    flex: 1 1 1;
+    font-size: 14px;
+  }
+
+  .verb-heading {
+    font-size: 5vw;
+  }
+}
+
+@media all and (max-width: 500px) {
+  .middle {
+    flex-direction: column;
+  }
+
+  .verb {
+    order: -1;
+  }
+
+  .verb-heading {
+    font-size: 6vw;
+  }
+
+  .bestiary {
+    margin-top: 10px;
+  }
+
+  .examples {
+    order: 1;
+  }
+}
+
+/* BOTTOM SECTION */
+.bottom {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  text-align: center;
+  /* background: rgba(52, 36, 50, 0.6); */
+}
+
+/* Tables */
+.table-container {
+  border-radius: 4px;
+  background: rgba(52, 36, 50, 0.6);
+  padding: 0 20px;
+}
+
+table {
+  text-align: center;
+  margin: auto;
+}
+
+/* Necesito esto? */
+.table1,
+.table2,
+.table3  {
+  display: none;
+}
+
+.tabletitle {
+  border-radius: 4px;
+  color: rgb(179, 54, 79);
+  font-size: 1.5vw;
+  font-family: "Avenir";
+  background: rgba(52, 36, 50, 0.6);
+  padding: 0 10px;
+}
+
+.mini-touch {
+  display: block;
+  background-color: rgba(137, 156, 155, 0.5);
+  border-radius: 3px;
+  box-shadow: 0 0 14px rgba(255, 255, 255, 0.2);
+  padding: 0 5px;
+  margin: 5px;
+  color: white;
+  font-family: "Avenir";
+  font-weight: lighter;
+  font-size: 1.3vw; /*18px*/
+  cursor: pointer;
+}
+
+.mini-touch:hover {
+  background-color: #bbb;
+}
+
+.hidden {
+  background-color: rgba(52, 36, 50, 0.4);
+  color: rgba(0, 0, 0, 0);
+  cursor: pointer;
+}
+
+/* Genders */
+.gender {
+  padding-bottom: 3px;
+  font-family: "Raleway", sans-serif;
+  font-weight: lighter;
+  background: none;
+  font-size: 1.3vw; /*18px*/
+}
+.masc {
+  color: rgba(242, 168, 159);
+}
+
+.neut {
+  color: rgba(190, 248, 252);
+}
+
+.fem {
+  color: rgba(235, 197, 248);
+}
+
+.sword {
+  width: 9vw;
+}
+
+/* BOTTOM SECTION: Responsive design: 500px & 800px */
+@media (max-width: 800px) {
+  .bottom {
+    justify-content: center;
+  }
+  .mini-touch {
+    font-size: 14px;
+  }
+
+  .gender {
+    font-size: 14px;
+  }
+
+  .tabletitle {
+    font-size: 16px;
+  }
+
+  .table-container {
+    flex: 1 1 50%;
+    background: none;
+    padding: 0;
+  }
+
+  .table-container:first-of-type {
+    flex: 1 1 100%;
+  }
+}
+
+@media (max-width: 500px) {
+  .bottom {
+    flex-direction: column;
+  }
+
+  .sword {
+    width: 80px;
+  }
+}
+
+/* FOOTER SECTION */
+.footer img {
+  display: block;
+  min-width: 170px;
+  max-width: 300px;
+  width: 30%;
+  margin: auto;
+}
