--- a/templates/adalab/style.css
+++ b/templates/adalab/style.css
@@ -6,11 +6,21 @@ html, body {
     line-height: 1.5;
 }
 
-li {
+header li {
     list-style-type: none;
     padding: 0;
 }
-
+li {
+    list-style: none;
+}
+main li::before {
+    content: "\2022"; 
+    color: #099d8d; 
+    font-weight: bold; 
+    display: inline-block; 
+    width: 1em; 
+    margin-left: -1em; 
+}
 .container {
     display: flex;
     flex-direction: column;
@@ -76,6 +86,7 @@ footer.section {
     border-radius: 15px;
     font-size: 1rem;
     padding: 3px 10px;
+    margin-right: 10px;
 }
 
 .tags {
@@ -136,10 +147,9 @@ footer.section {
 
 .answer b {
     background-color: rgba(99,214,196,.3);
-    padding: 5px 10px 0;
-    border-bottom: solid 2.5px #13dac6af;
-    border-top-right-radius: 2px;
-    border-top-left-radius: 2px;
+    padding: 2px 10px 2px;
+    /* border-bottom: solid 2.5px #13dac6af; */
+    border-radius: 2px;
     font-weight: 600;
     color: #0d665d;
 }
@@ -167,6 +177,7 @@ footer.section {
     line-height: 1.5;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
+    overflow-wrap: break-word; 
 }
 
 .terminal > img {
@@ -215,7 +226,18 @@ footer p {
 .fa-html5 {
 color: rgb(40,98,233);
 }
-
+.fa-js-square {
+    font-size: 32px;
+    color: rgb(251, 255, 36);
+}
+.fa-react {
+    font-size: 32px;
+    color: purple;
+}
+.fa-git-alt {
+    font-size: 32px;
+    color: rgb(255, 99, 9);
+}
 footer .author-name {
     font-family: 'Pacifico', cursive;
     font-size: 16px;
@@ -237,4 +259,8 @@ footer .author-name {
 .fox-img {
     width: 40px;
     vertical-align: -10px;
+}
+
+.hidden {
+    display: none;
 }
